--- a/Lecture 32 - MVC/templates/index.html
+++ b/Lecture 32 - MVC/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
+{% block title %} Car Shop {% endblock %}
 
 {% block body %}
-
 <div class="container">
 
     <div class="row">
@@ -41,7 +41,6 @@
                 </tr>
 
                  <!-- for data info -->
-
 
                 {% for car in cars %}
                     <tr>
@@ -214,5 +213,7 @@
 
 </div>
 
+
 {% endblock %}
+
 
