--- a/Lecture 32 - MVC/templates/index.html
+++ b/Lecture 32 - MVC/templates/index.html
@@ -50,7 +50,7 @@
                         <td>{{ car.instock }}</td>
                         <td>${{ car.price }}</td>
                         <td>
-                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{ car.id }}">Edit</a>
 
                             <a href="/delete/{{ car.id }}" class="btn btn-danger btn-xs"  onclick="return confirm('Are you sure to delete?')">Delete</a>
 
@@ -58,9 +58,9 @@
                         </td>
 
                     </tr>
-                {% endfor %}
 
-                <div id="modaledit" class="modal fade" role="dialog">
+
+                <div id="modaledit{{ car.id }}" class="modal fade" role="dialog">
 
                     <div class="modal-dialog">
 
@@ -75,14 +75,14 @@
 
                             <div class="modal-body">
 
-                                <form action="" method="post">
+                                <form action="/update/{{car.id}}" method="post">
 
 
                                     <div class="form-group">
 
                                         <label >Manufacturer:</label>
                                         <input type="hidden" name="id" value="">
-                                        <input type="text" class="form-control" name="manufacturer" value="">
+                                        <input type="text" class="form-control" name="manufacturer" value="{{car.manufacturer}}">
 
                                     </div>
 
@@ -90,7 +90,7 @@
 
                                         <label >Model:</label>
                                         <input type="hidden" name="id" value="">
-                                        <input type="text" class="form-control" name="model" value="">
+                                        <input type="text" class="form-control" name="model" value="{{car.model}}">
 
                                     </div>
 
@@ -102,14 +102,12 @@
                                             <option value="NO" style="color: red;"><b>NO</b></option>
                                         </select>
 
-
-
                                     </div>
 
                                     <div class="form-group">
 
                                         <label >Price: </label>
-                                        <input type="text" class="form-control" name="price" value="">
+                                        <input type="text" class="form-control" name="price" value="{{car.price}}">
 
 
 
@@ -140,6 +138,7 @@
 
                 </div>
 
+                {% endfor %}
 
 
             </table>
